konst/tests/misc_tests/destructure_ui_tests/drop_empty_braced_struct_err.rs
struct Braced {}

impl Drop for Braced {
    fn drop(&mut self) {}
}


const fn to_bar(foo: Braced) {
    konst::destructure!{Braced{} = foo}
}


fn main(){}